--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -128,13 +128,16 @@
                     android:visibility="gone" />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/find_btn"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:drawableRight="@android:drawable/ic_search_category_default"
-                android:text="@string/search"
-                android:textSize="18dp" />
+            <LinearLayout style="@style/group_separator_style" >
+
+                <Button
+                    android:id="@+id/find_btn"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableRight="@android:drawable/ic_search_category_default"
+                    android:text="@string/search"
+                    android:textSize="18dp" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
