--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -32,5 +32,21 @@
         <item name="android:layout_weight">1</item>
         <item name="android:singleLine">true</item>
     </style>
-
+    
+    <style name="list_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingBottom">1dp</item>
+        <item name="android:paddingLeft">3dp</item>
+        <item name="android:typeface">sans</item>
+    </style>
+    
+    <style name="list_text_highlighted" parent="@style/list_text">
+        <item name="android:textStyle">bold</item>
+	</style>  
+	<style name="list_grp">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>    	    
+	</style>
+    
 </resources>
